--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ filelock==3.13.1
 Flask==2.0.2
 fonttools==4.40.0
 fqdn==1.5.1
+fsspec==2024.6.0
 idna==3.3
 ipykernel==6.23.2
 ipython==8.14.0
@@ -54,11 +55,13 @@ MarkupSafe==2.0.1
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mistune==2.0.5
+mpmath==1.3.0
 nbclassic==1.0.0
 nbclient==0.8.0
 nbconvert==7.5.0
 nbformat==5.9.0
 nest-asyncio==1.5.6
+networkx==3.3
 notebook==6.5.4
 notebook_shim==0.2.3
 numpy==1.21.3
@@ -105,14 +108,17 @@ sniffio==1.3.0
 soupsieve==2.4.1
 stack-data==0.6.2
 statsmodels==0.14.0
+sympy==1.12.1
 terminado==0.17.1
 threadpoolctl==3.1.0
 tinycss2==1.2.1
 toml==0.10.2
+torch==2.2.2
 tornado==6.3.2
 tqdm==4.62.3
 traitlets==5.9.0
 trash-cli==0.24.5.26
+typing_extensions==4.12.2
 uri-template==1.2.0
 urllib3==1.26.7
 virtualenv==20.25.0
